--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
+  },
+  "overrides": {
+    "react-dom": "$react-dom"
   }
 }
