--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,21 +11,32 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@rive-app/react-canvas": "^4.25.1",
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/three": "^0.182.0",
+    "d3-geo": "^3.1.1",
+    "d3-scale": "^4.0.2",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.562.0",
+    "maath": "^0.10.8",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^3.6.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
+    "@types/d3-geo": "^3.1.0",
+    "@types/d3-scale": "^4.0.9",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@types/react-simple-maps": "^3.0.6",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
